<resources>
    <string name="app_name" translatable="false">Parlé</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="verify">Verify Password</string>
    <string name="login">LOGIN</string>
    <string name="login_register">Don\'t have an account?</string>
    <string name="register">REGISTER</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="photo">[Photo]</string>
    <string name="nearby_users">Nearby Users</string>
    <string name="search">Search</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="language">Language</string>
    <string name="name">Name</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="send_button_label">send</string>
    <string name="search_contact">Add Contacts</string>
    <string name="suggested">SUGGESTED</string>
    <string name="nearby">Nearby</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
