<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/amber_200"
    android:fitsSystemWindows="true"
    android:theme="@android:style/Theme.NoTitleBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan_200"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <!-- Logo -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/black_banner" />

        <!-- E-mail -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:textColor="@color/black">


            <EditText
                android:id="@+id/edit_text_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"
                android:background="@color/colorPrimary"
                />
            <!-- android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/edit_text_password"
                android:layout_alignParentStart="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress" -->
        </android.support.design.widget.TextInputLayout>

        <!-- Password -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:textColor="@color/black" >
            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@color/colorPrimary"
                />
            <!-- android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_login"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="35dp"
                android:hint="@string/password"
                android:inputType="textPassword" /> -->
        </android.support.design.widget.TextInputLayout>

        <!-- Login -->
        <Button
            android:id="@+id/button_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/login"
            android:textSize = "16dip"
            android:background="@color/white"
            android:textColor="@color/chatReceiver"/>
        <!-- style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@color/buttons"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button_register" /> -->

        <!-- Signup -->
        <!--
      <TextView
          android:id="@+id/text_view_register"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="24dp"
          android:gravity="center"
          android:text="Don't have an account?"
          android:textSize="16dip" /> -->

       <Button
           android:id="@+id/button_register"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="24dp"
           android:gravity="center"
           android:text="@string/login_register"
           android:textSize="16dip"
           android:background="@color/colorPrimary"/>


    </LinearLayout>
</ScrollView>